--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li *ngFor="let product of products">
-    <a routerLink="/product/{{product.id}}" routerLinkActive='Active'>
+    <a routerLink="/product/{{product.id}}" routerLinkActive='active'>
       {{ product.albumName }}
     </a>
   </li>
